frontend/test/should_pass/deque_model_001.gm
enum et
{
	a, b, c = 7
}

node class A
{
	b:boolean = false;
	val:int = 42;
	const constVal:int = 42;
	strval:string = "foo";
	const constStrval:string = "foo";
	niceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	const constNiceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	spiceDeque:deque<int> = ]
		42
	[;
	const constSpiceDeque:deque<int> = ]
		42
	[;
	enumDeque:deque<et> = ]
		et::b,
		et::c
	[;
}

edge class E
{
	val:int = 42;
	const constVal:int = 42;
	strval:string = "foo";
	const constStrval:string = "foo";
	niceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	const constNiceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	spiceDeque:deque<int> = ]
		42
	[;
	const constSpiceDeque:deque<int> = ]
		42
	[;
	enumDeque:deque<et> = ]
		et::a
	[;
}

node class AA extends A
{
	val = 666;
	constVal = 666;
	strval = "fooo";
	constStrval = "fooo";
	niceDeque = deque<string>]
		"fooo",
		"baar"
	[;
	constNiceDeque = deque<string>]
		"fooo",
		"baar"
	[;
	spiceDeque = deque<int>]
		666
	[;
	constSpiceDeque = deque<int>]
		666
	[;
	enumDeque = deque<et>]
		et::a,
		et::b,
		et::c
	[;
}

node class AAA extends AA
{
	val = 4711;
	constVal = 4711;
	strval = "urgs";
	constStrval = "urgs";
	spiceDeque = deque<int>]
		4711
	[;
	constSpiceDeque = deque<int>]
		4711
	[;
	enumDeque = deque<et>]
		et::b
	[;
}

node class AAb extends A
{
	val = 666;
	constVal = 666;
	strval = "fooo";
	constStrval = "fooo";
	spiceDeque = deque<int>]
		666
	[;
	constSpiceDeque = deque<int>]
		666
	[;
	enumDeque = deque<et>]
		et::a,
		et::b,
		et::c
	[;
}

edge class EE extends E
{
	val = 666;
	constVal = 666;
	strval = "fooo";
	constStrval = "fooo";
	niceDeque = deque<string>]
		"fooo",
		"baar"
	[;
	constNiceDeque = deque<string>]
		"fooo",
		"baar"
	[;
	spiceDeque = deque<int>]
		666
	[;
	constSpiceDeque = deque<int>]
		666
	[;
	enumDeque = deque<et>]
		et::a,
		et::b,
		et::c
	[;
}

edge class EEE extends EE
{
	val = 4711;
	constVal = 4711;
	strval = "urgs";
	constStrval = "urgs";
	spiceDeque = deque<int>]
		4711
	[;
	constSpiceDeque = deque<int>]
		4711
	[;
	enumDeque = deque<et>]
		et::b
	[;
}

edge class EEb extends E
{
	val = 666;
	constVal = 666;
	strval = "fooo";
	constStrval = "fooo";
	spiceDeque = deque<int>]
		666
	[;
	constSpiceDeque = deque<int>]
		666
	[;
	enumDeque = deque<et>]
		et::a,
		et::b,
		et::c
	[;
}
