frontend/test/should_fail/deque_model_002.gm
node class A
{
	val:int;
	niceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	spiceDeque:deque<int> = ]
		42
	[;
}

edge class E
{
	val:int;
	niceDeque:deque<string> = ]
		"foo",
		"bar"
	[;
	spiceDeque:deque<int> = ]
		42
	[;
}